--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="shortcut icon" href="#">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
         html,
         body {
@@ -23,31 +24,49 @@
     <script src="https://cdn.jsdelivr.net/npm/rete-connection-plugin@0.9.0/build/connection-plugin.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/rete-context-menu-plugin@0.6.0/build/context-menu-plugin.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/rete-module-plugin@0.4.2/build/module-plugin.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
     <title>dasflow</title>
 </head>
 
 <body>
-<div class="editor">
-    <div class="container">
-        <div class="node-editor"></div>
+<div class="container-fluid" style="height: 96vh;">
+    <div class="offcanvas offcanvas-top px-4 show" id="info" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" aria-labelledby="offcanvasScrollingLabel">
+        <div class="offcanvas-header">
+            <h4 class="offcanvas-title" style="color: white;"><strong>Press 'save' in menu to see simulation result</strong></h4>
+            <button class="btn-close" type="button" data-bs-dismiss="offcanvas" aria-label="Закрыть"></button>
+        </div>
+        <div class="offcanvas-body row gx-4" style="padding-top: 0px;">
+            <div class="col info_col">
+                <div class="info_item">
+                    <div class="info_label">Execution result</div>
+                    <div class="overflow-auto info_text"  id="sim_res_id"></div>
+                </div>
+            </div>
+            <div class="col info_col">
+                <div class="info_item">
+                    <div class="info_label">DaScript code</div>
+                    <div class="overflow-auto info_text"  id="code_id"></div>
+                </div>
+            </div>
+            <div class="col info_col">
+                <div class="info_item">
+                    <div class="info_label">Global errors</div>
+                    <div class="overflow-auto info_text"  id="global_errors_id"></div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="dock"></div>
-    <div class="simulation" id="sim_id" hidden="true">
-        <div class="simulation_result" id="sim_res_id" data-placeholder="Press 'save' in menu to see simulation result"></div>
-        <button onclick="document.getElementById('sim_res_id').innerHTML = '' ">clear</button>
-        <button onclick="document.getElementById('sim_id').hidden = true;
-                         document.getElementById('show_button_id').hidden = false;">
-            hide
+
+    <div class="row">
+        <button class="btn btn-primary btn-lg" type="button" data-bs-toggle="offcanvas" data-bs-target="#info" aria-controls="info"
+                style="background: #4e58bf; border-color: #4e58bf;">
+            Show info
         </button>
     </div>
-    <div id="show_button_id">
-        <button onclick="document.getElementById('sim_id').hidden = false;
-                         document.getElementById('show_button_id').hidden = true;"
-                style="width: 100px;">
-            show
-        </button>
-    </div>
+
+    <div class="row" id="node-editor"></div>
 </div>
+
 <script type="text/typescript" src="src/main.ts"></script>
 </body>
 
